# setu-payment-service

./: .dockerignore  .env.example  .gitignore  API.md  ARCHITECTURE.md  Dockerfile  FINDINGS.md  Makefile  POSTMAN_COLLECTION.json  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.py
alembic/: env.py
alembic/versions/: 20260422_0001_initial_schema.py
app/: config.py  database.py  main.py  models.py  schemas.py
app/api/: routes.py
app/services/: event_ingestion.py  reconciliation.py
data/: sample_events.json
scripts/: seed_sample_data.py  start.sh
tests/: conftest.py  test_api.py  test_concurrency.py  test_edge_cases.py  test_integration_dataset.py  test_status_parity.py
